# mastering_tool

./: .gitignore  CATALOGUE.csv  CATALOGUE.md  Dockerfile  EXECUTION_PLAN_ADDENDUM_2026-06-22.md  GAP_ANALYSIS_Cunami_Violet.md  MASTERING_REPORT(1).md  MASTERING_REPORT(10).md  MASTERING_REPORT(12).md  MASTERING_REPORT(13).md  MASTERING_REPORT(15).md  MASTERING_REPORT(16).md  MASTERING_REPORT(19).md  MASTERING_REPORT(2).md  MASTERING_REPORT(20).md  MASTERING_REPORT(21).md  MASTERING_REPORT(27).md  MASTERING_REPORT(3).md  MASTERING_REPORT(4).md  MASTERING_REPORT(7).md  MASTERING_REPORT(8).md  MASTERING_REPORT.md  MASTERING_REPORT.txt  Mastering_Toolshop.spec  PIPELINE_UPGRADE_REPORT.md  PREMASTER_ACCEPTANCE_SPEC.md  REFERENCE_LIBRARY.csv  REFERENCE_LIBRARY.md  TRAY_LAUNCHER.md  UNIFIED_EXECUTION_PLAN.md  WSL2_SETUP.md  apply_monitor_correction.sh  chain.json  compass_artifact_wf-b4204be9-1dd2-44ab-9d85-0a2367e6a905_text_markdown.md  competitive_profile.sh  deploy.sh  determinism_md5(3).txt  docker-compose.yml  family_policy.sh  final_loudness(1).txt  (+54 more)
.session_archive/: 01_Music AI Toolshop Development.md  02_Mastering Toolshop Icon Update.md  03_Fix Mastering Toolshop Loudness.md  04_Implement OpenDAW Stem Separation.md  05_Music-AI-Toolshop Phases 4 & 6 Implementation.md  06_Neutone Integration and FL Studio Render.md
archive/: MASTERING_REPORT(11).md  MASTERING_REPORT(14).md  MASTERING_REPORT(18).md  MASTERING_REPORT(23).md  MASTERING_REPORT(25).md  MASTERING_REPORT(28).md  MASTERING_REPORT(29).md  MASTERING_REPORT(5).md  MASTERING_REPORT(6).md  MASTERING_REPORT(9).md  (+17 more)
(+54 files in other folders)
