[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastering-tool"
version = "0.1.0"
description = "Vocal chain tools for Music-AI-Toolshop (Phase 7/8)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# Core dependencies needed by the chain DSL, vocal doctor metrics, and remix.
dependencies = [
    "numpy>=2.0,<2.2",
    "soundfile>=0.12",
    "librosa>=0.10",
    "scipy>=1.10",
    "pyloudnorm>=0.1.0",
    "pyyaml>=6.0",
    "pedalboard>=0.9.23",
]

[project.optional-dependencies]
restore = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "deepfilternet>=0.5.0",
    "voicefixer>=0.1.0",
    "transformers>=4.35",
]
qc = [
    "faster-whisper>=1.0.0",
]
clap = [
    "transformers>=4.35",
    "torch>=2.3",
    "librosa>=0.10",
    "numpy>=2.0,<2.2",
]
all = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "deepfilternet>=0.5.0",
    "voicefixer>=0.1.0",
    "transformers>=4.35",
    "faster-whisper>=1.0.0",
]

[project.scripts]
# Future CLI entry points can go here.

[tool.setuptools]
# setup.py handles dynamic package discovery from the 'tools' directory.
